@@ -3,6 +3,7 @@ include config.make
 PROJECTNAME = monocov
 GUI = gtk
 LIBS=-r:Mono.Cecil
+CFLAGS=-O2 -g
 
 all: monocov.exe libmono-profiler-monocov.so symbols.exe
 
@@ -11,7 +12,8 @@ GUI_SRCS = \
 	gui/gtk/MonoCov.cs \
 	gui/gtk/CoverageView.cs \
 	gui/gtk/SourceWindow.cs
-GUI_LIBS = -pkg:gtk-sharp-2.0 -pkg:gnome-sharp-2.0 -pkg:glade-sharp-2.0 -r:System.Drawing -resource:gui/gtk/monocov.glade,monocov.glade
+GUI_LIBS = -pkg:gtk-sharp-2.0 -pkg:glade-sharp-2.0 -r:System.Drawing -resource:gui/gtk/monocov.glade,monocov.glade
+GUI_DEPS=gui/gtk/monocov.glade
 else
 GUI_SRCS = \
 	gui/qt/MonoCov.cs \
@@ -22,6 +24,7 @@ GUI_LIBS = -r Qt
 endif
 
 SRCS = \
+	Constants.cs \
 	CoverageItem.cs \
 	NamespaceCoverageItem.cs \
 	ClassCoverageItem.cs \
@@ -33,7 +36,7 @@ SRCS = \
 	MonoCovMain.cs \
 	$(GUI_SRCS)
 
-monocov.exe: $(SRCS) style.xsl .gui-$(GUI)
+monocov.exe: $(SRCS) style.xsl .gui-$(GUI) $(GUI_DEPS)
 	gmcs -debug /target:exe /out:$@ -define:GUI_$(GUI) $(LIBS) -r:Mono.CompilerServices.SymbolWriter -r:Mono.GetOptions $(GUI_LIBS) $(SRCS) -resource:style.xsl,style.xsl -resource:trans.gif,trans.gif
 
 .gui-gtk:
@@ -51,7 +54,7 @@ nunit-console.exe: nunit-console.cs
 	gmcs -r:nunit.framework -r:nunit.core -r:nunit.util -r:Mono.GetOptions nunit-console.cs
 
 libmono-profiler-monocov.so: coverage.c
-	$(CC) -g `pkg-config --cflags glib-2.0` --shared -fPIC -o $@ $^
+	$(CC) $(CFLAGS) -DVERSION=\"$(VERSION)\" `pkg-config --cflags glib-2.0` --shared -fPIC -o $@ $^
 
 install: all
 	mkdir -p $(prefix)/lib/monocov
@@ -90,7 +93,7 @@ clean:
 	rm -f monocov.exe monocov.exe.mdb symbols.exe symbols.exe.mdb nunit-console.exe libmono-profiler-monocov.so
 
 distclean:
-	rm -f monocov Mono.Cecil.dll config.make
+	rm -f monocov Mono.Cecil.dll config.make Constants.cs
 
 dist:
 	tar -chzf $(PROJECTNAME)-$(VERSION).tar.gz `cat MANIFEST` \
