@@ -4,4 +4,5 @@
 <glade-project>
   <name></name>
   <program_name></program_name>
+  <gnome_support>FALSE</gnome_support>
 </glade-project>
